--- a/website/static/styleLoginPage.css
+++ b/website/static/styleLoginPage.css
@@ -1,6 +1,7 @@
 
 body {
     background-color: #eee
+    background-image: ;
 }
 
 /* All code below taken from http://tympanus.net/codrops/2012/10/16/custom-login-form-styling/, example 4 */
@@ -19,8 +20,9 @@ body {
 }
 
 .form-4 h1 {
-    font-size: 22px;
+    font-size: 32px;
     padding-bottom: 20px;
+    text-align: center;
 }
 
 /* Inputs */
@@ -28,7 +30,7 @@ body {
 .form-4 input[type=password] {
     /* Size and position */
     width: 100%;
-    padding: 8px 4px 8px 10px;
+    padding: 22px 4px 28px 70px;
     margin-bottom: 15px;
 
     /* Styles */
@@ -48,7 +50,7 @@ body {
     /* Font styles */
     font-family: 'Raleway', 'Lato', Arial, sans-serif;
     color: #fff;
-    font-size: 13px;
+    font-size: 23px;
 }
 
 /* Style for placeholders */
@@ -93,8 +95,9 @@ body {
 .form-4 input[type=submit] {
     /* Size and position */
     width: 100%;
-    padding: 8px 5px;
-    
+    padding: 8px 45px;
+    margin-left: 35px;
+
     /* Styles */
     background: linear-gradient(rgba(99,64,86,0.5), rgba(76,49,65,0.7));    
     border-radius: 5px;
@@ -108,7 +111,7 @@ body {
     /* Font styles */
     color: white;
     text-shadow: 0 1px 0 rgba(0,0,0,0.3);
-    font-size: 16px;
+    font-size: 26px;
     font-weight: bold;
     font-family: 'Raleway', 'Lato', Arial, sans-serif;
 }
